Fix: Correct AnnounceBar dark mode background color for readability

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -54,5 +54,6 @@
 }
 
 [data-theme='dark'] div[class*='announcementBar'] {
-  background-color: red;
+  background-color: #A2AFBD;
+  color: white;
 }
